Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                 </svg>
               </div>
             </div>
-            <span id="logo_text" class="home-text09">NORDEVLAB</span>
+            <a href="index.html" id="logo_text" class="home-text09">
+              NORDEVLAB
+            </a>
           </header>
           <div class="home-container2">
             <div id="tblock" class="home-container3">
